# src/routes/authRoutes.ts
@@ -4,7 +4,7 @@ import AuthController from '../controllers/authController';
 const router = Router();
 
 router.post('/connect', AuthController.getConnect);
-router.get('/auth', AuthController.auth);
+router.get('/', AuthController.auth);
 router.post('/disconnect', AuthController.getDisconnect);
 
 export default router;
